--- a/TheGym/TheGym.csproj
+++ b/TheGym/TheGym.csproj
@@ -63,6 +63,10 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="monotouch" />
+    <Reference Include="HtmlAgilityPack, Version=1.4.0.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\iPhoneSimulator\Debug\HtmlAgilityPack.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainWindow.xib.designer.cs">
@@ -80,6 +84,9 @@
     <Compile Include="GymNavigationController.cs" />
     <Compile Include="ScheduleViewController.cs" />
     <Compile Include="GymState.cs" />
+    <Compile Include="TTTSource.cs" />
+    <Compile Include="TTTHttp.cs" />
+    <Compile Include="GymTabBarControllerDelegate.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainWindow.xib" />
@@ -90,4 +97,7 @@
       <Properties InternalTargetFrameworkVersion="IPhone" />
     </MonoDevelop>
   </ProjectExtensions>
+  <ItemGroup>
+    <None Include="Info.plist" />
+  </ItemGroup>
 </Project>
