lagt til parsing av sentre

--- a/TheGym/TheGym.csproj
+++ b/TheGym/TheGym.csproj
@@ -89,6 +89,7 @@
     <Compile Include="ScheduleSearchBar.cs" />
     <Compile Include="TTTSchedules.cs" />
     <Compile Include="TTTBookings.cs" />
+    <Compile Include="TTTGyms.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainWindow.xib" />
