--- a/TheGym/bin/iPhoneSimulator/Debug/TheGym.app/Info.plist
+++ b/TheGym/bin/iPhoneSimulator/Debug/TheGym.app/Info.plist
@@ -36,6 +36,8 @@
     <array>
       <integer>1</integer>
     </array>
+    <key>DTPlatformVersion</key>
+    <string>4.2 Seed 2</string>
     <key>MinimumOSVersion</key>
     <string>3.0</string>
     <key>NSMainNibFile</key>
